gitlab-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: yrzr/gitlab-ce-arm64v8
        imagePullPolicy: Always
        ports:
          - name: http-port
            containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 0.5
            memory: 2Gi
        volumeMounts:
          - name: gitlab
            mountPath: /var/opt/gitlab

      volumes:
        - name: gitlab
          persistentVolumeClaim:
            claimName: gitlab-pvc
