gitlab-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
